--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@mysten/sui": "^1.45.0",
     "hono": "^4.6.11"
   },
   "devDependencies": {
@@ -21,4 +22,3 @@
     "typescript": "5.9.2"
   }
 }
-
