--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@mysten/sui": "^1.45.0",
+    "@repo/sdk": "*",
+    "@repo/shared": "*",
     "hono": "^4.6.11"
   },
   "devDependencies": {
