--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -19,6 +19,7 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
-    "@mysten/sui": "^1.45.0"
+    "@mysten/sui": "^1.45.0",
+    "@repo/shared": "*"
   }
 }
