--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,17 +11,17 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@mysten/dapp-kit": "^0.14.36",
+    "@atomic402/sui-sdk": "^0.0.1",
+    "@mysten/dapp-kit": "^0.14.53",
     "@mysten/sui": "^1.45.0",
     "@radix-ui/react-slot": "^1.2.4",
-    "@repo/sdk": "*",
     "@repo/shared": "*",
     "@tailwindcss/postcss": "^4.1.17",
-    "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query": "^5.90.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
-    "next": "^16.0.1",
+    "next": "^16.0.3",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.19.1",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "^9.39.1",
