--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,7 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@atomic402/sui-sdk": "^0.0.1",
+    "@atomic402/sui-sdk": "*",
     "@mysten/sui": "^1.45.0",
     "@repo/shared": "*",
     "hono": "^4.6.11"
